2004-11-18  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): Use bold markup to show changes
	in a monitored log instead of selecting the changed lines.

	* zoom.c: Simplify a lot. Use labels and markup in zoom dialog.

	* info.c (LogInfo): Simplify a lot. Use markup in properties dialog.
	(LogInfo): Make the label text selectable.

	* logview.c (logview_create_monitor_widget): Move it here. Remove
	useless calls.
	(LoadLogMenu): Don't set the size of the filechooser. Don't change
	the directory to the preset every time we show the filechooser.
	(logview_help): Remove unused variable.

	* monitor.c (monitor_stop): Little refactoring.

2004-11-16  Vincent Noel  <vnoel@cox.net>

	* logview.c (save_session): Use g_get_prgname for restoring session.

2004-11-09  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_copy): Handle multiple lines selection.
	(logview_select_all): New. Add a "Select All" menu item.
	(logview_menus_set_state): Insensitize "Select All" when monitoring.
	Add a separator before the "Find" menu item.

	* log_repaint.c (handle_selection_changed_cb): Allow the selection
	of multiple log lines.

	* logview.c (logview_copy): Add a "copy" menuitem to copy the
	content of the active log line to the clipboard.

2004-11-05  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: Remove a warning.

	* zoom.c: Move stuff around, make functions static.

	* log_repaint.c: remove log_redrawdetail.

	* config.c: Remove includes.

	* configdata.h: New. Move ConfigData struct here.

	* desc_db.c: Add copyright.	

	* actions.h: New. Move the Action structure here.

	* actions.c: Add copyright.

	* userprefs.h: Move UserPrefsStruct here.

	* logrtns.h: Remove obsolete prototypes.

	* log_repaint.c: Remove global variables.

	* desc_db.c:
	* userprefs.c: 
	* zoom.c: 
	* about.c:
	* calendar.c: 
	* misc.h:
	* logview.h:
	* actions.c:
	* misc.c: Don't always include gnome.h. Use relevant includes.

	* logview.c (logview_help): Adapt.
